// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Feedback/Progress Circular 1`] = `
<div
  className="MuiBox-root css-rmz4vk"
>
  <span
    className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
    data-cy="progress"
    role="progressbar"
    style={
      {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={{}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Feedback/Progress Circular Color 1`] = `
<div
  className="MuiBox-root css-rmz4vk"
>
  <span
    className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorError css-1lxih1g-MuiCircularProgress-root"
    data-cy="progress"
    role="progressbar"
    style={
      {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={{}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Feedback/Progress Circular Determinate 1`] = `
<div
  className="MuiBox-root css-rmz4vk"
>
  <span
    aria-valuenow={50}
    className="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1rn30mb-MuiCircularProgress-root"
    data-cy="progress"
    role="progressbar"
    style={
      {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "63.460px",
          }
        }
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Feedback/Progress Circular With Label 1`] = `
<div
  className="MuiBox-root css-rmz4vk"
>
  <span
    aria-valuenow={50}
    className="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1rn30mb-MuiCircularProgress-root"
    data-cy="progress"
    role="progressbar"
    style={
      {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "63.460px",
          }
        }
      />
    </svg>
  </span>
  <div
    className="MuiBox-root css-1o8dslu"
  >
    <div
      className="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
    >
      50%
    </div>
  </div>
</div>
`;

exports[`Storyshots Feedback/Progress Linear 1`] = `
<div
  className="MuiBox-root css-70qvj9"
>
  <div
    className="MuiBox-root css-1bhivts"
  >
    <span
      className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate css-eglki6-MuiLinearProgress-root"
      data-cy="progress"
      role="progressbar"
    >
      <span
        className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-5ir5xx-MuiLinearProgress-bar1"
        style={{}}
      />
      <span
        className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate css-1r8wrcl-MuiLinearProgress-bar2"
        style={{}}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Feedback/Progress Linear Color 1`] = `
<div
  className="MuiBox-root css-70qvj9"
>
  <div
    className="MuiBox-root css-1bhivts"
  >
    <span
      className="MuiLinearProgress-root MuiLinearProgress-colorError MuiLinearProgress-indeterminate css-1qzfjjf-MuiLinearProgress-root"
      data-cy="progress"
      role="progressbar"
    >
      <span
        className="MuiLinearProgress-bar MuiLinearProgress-barColorError MuiLinearProgress-bar1Indeterminate css-trpfwy-MuiLinearProgress-bar1"
        style={{}}
      />
      <span
        className="MuiLinearProgress-bar MuiLinearProgress-barColorError MuiLinearProgress-bar2Indeterminate css-1ta3urv-MuiLinearProgress-bar2"
        style={{}}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Feedback/Progress Linear Determinate 1`] = `
<div
  className="MuiBox-root css-70qvj9"
>
  <div
    className="MuiBox-root css-1bhivts"
  >
    <span
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={50}
      className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-eglki6-MuiLinearProgress-root"
      data-cy="progress"
      role="progressbar"
    >
      <span
        className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
        style={
          {
            "transform": "translateX(-50%)",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Feedback/Progress Linear With Label 1`] = `
<div
  className="MuiBox-root css-70qvj9"
>
  <div
    className="MuiBox-root css-1bhivts"
  >
    <span
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={50}
      className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-eglki6-MuiLinearProgress-root"
      data-cy="progress"
      role="progressbar"
    >
      <span
        className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
        style={
          {
            "transform": "translateX(-50%)",
          }
        }
      />
    </span>
  </div>
  <div
    className="MuiBox-root css-pazuet"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
    >
      50%
    </p>
  </div>
</div>
`;
